Z-index issue

--- a/blocks/section-trust-bar/section-trust-bar.css
+++ b/blocks/section-trust-bar/section-trust-bar.css
@@ -6,7 +6,6 @@
 	grid-template-columns: subgrid;
 	padding: var(--spacing-24);
 	view-transition-name: trust-bar;
-	z-index: 5;
 
 	@media (width >=40rem) {
 		padding: var(--spacing-32) var(--spacing-64);
